Ajustador de media query responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="calendar-header" id="calendar-month">JUL</div>
             <div class="calendar-body">6</div>
         </div>
-        <div class="title" style="margin-top: 10px;">
+        <div class="title2" style="margin-top: 10px;">
             <p>Y aunque no soy muy bueno haciendo videos, hice esto para tí</p>
         </div>
         <div class="ventana">
